@@ -10,7 +10,6 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @Slf4j
 @Service
@@ -22,22 +21,20 @@ public class ImageService {
 
     public String saveImage(MultipartFile image, String name) {
 
-        String filename = name + "." + StringUtils.getFilenameExtension(image.getOriginalFilename());
-        Path filePath = Paths.get(imageDir).resolve(filename);
-
+        String extension = StringUtils.getFilenameExtension(image.getOriginalFilename());
+        String filename = name + "." + extension;
+        Path filePath = Path.of(imageDir,filename);
         try {
             Files.write(filePath, image.getBytes());
         } catch (IOException e) {
             log.error("Error writing file: {}", e.getMessage());
             throw new RuntimeException("Error writing file", e);
         }
-
-        return filePath.toString();
+        return "/users/image/" + filename;
     }
 
-    public byte[] getImage(String path) throws IOException {
-        String fullPath = imageDir + path;
-        System.out.println(fullPath);
+    public byte[] getImage(String name) throws IOException {
+        String fullPath = imageDir + "/" + name;
         return Files.readAllBytes(Path.of(fullPath));
     }
 }
